--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -512,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
@@ -522,6 +522,7 @@
         "#si-favorite\n",
         "import re\n",
         "input_string = \"My favorite number is 3.\"\n",
+        "pattern = r'\\d'\n",
         "hasNumber = re.search(pattern, input_string)"
       ]
     },
@@ -975,14 +976,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1"
       },
       "outputs": [],
       "source": [
-        "#si-date-check"
+        "#si-date-check\n",
+        "def dateCheck(date_string):\n",
+        "    pattern = r'^\\d{2}-\\d{2}-\\d{4}$'\n",
+        "    if re.match(pattern, date_string):\n",
+        "        day, month, year = map(int, date_string.split('-'))\n",
+        "        if 1 <= day <= 31 and 1 <= month <= 12 and len(str(year)) == 4:\n",
+        "            return True\n",
+        "        else:\n",
+        "            return False\n",
+        "    else:\n",
+        "        return False"
       ]
     },
     {
