--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "1e860dcd-3caa-428a-aa00-fcff6b6f0d36",
       "metadata": {
         "id": "1e860dcd-3caa-428a-aa00-fcff6b6f0d36"
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "888dc2e8-f944-4ae8-aee2-fe4d7f8fa82b",
       "metadata": {
         "colab": {
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "834e2ae5-b21b-49e2-a10d-097e5ea11e49",
       "metadata": {
         "colab": {
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "dd212122-44b7-4849-a308-987ed5d06160",
       "metadata": {
         "colab": {
@@ -512,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
@@ -976,7 +976,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1"
@@ -1014,14 +1014,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
         "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
       },
       "outputs": [],
       "source": [
-        "#si-email-check"
+        "#si-email-check\n",
+        "def emailCheck(email_string):\n",
+        "    pattern = r'^[a-zA-Z0-9._]+@[a-zA-Z0-9]+\\.(com|edu|org)$'\n",
+        "    if re.match(pattern, email_string):\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False"
       ]
     }
   ],
