--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -512,18 +512,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
-        "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
+        "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c71beac7-c9f2-45e6-86df-f597ba59040a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Has a number.\n"
+          ]
+        }
+      ],
       "source": [
         "#si-favorite\n",
         "import re\n",
         "input_string = \"My favorite number is 3.\"\n",
         "pattern = r'\\d'\n",
-        "hasNumber = re.search(pattern, input_string)"
+        "hasNumber = re.search(pattern, input_string)\n",
+        "if hasNumber:\n",
+        "    print(\"Has a number.\")\n",
+        "else:\n",
+        "    print(\"No number.\")"
       ]
     },
     {
@@ -976,7 +992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1"
@@ -1014,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
         "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
