--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -512,34 +512,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
-        "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c71beac7-c9f2-45e6-86df-f597ba59040a"
+        "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Has a number.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-favorite\n",
         "import re\n",
         "input_string = \"My favorite number is 3.\"\n",
-        "pattern = r'\\d'\n",
-        "hasNumber = re.search(pattern, input_string)\n",
-        "if hasNumber:\n",
-        "    print(\"Has a number.\")\n",
-        "else:\n",
-        "    print(\"No number.\")"
+        "pattern = r'\\d{2,}'\n",
+        "hasNumber = re.search(pattern, input_string)"
       ]
     },
     {
