--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -976,7 +976,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1"
@@ -984,6 +984,7 @@
       "outputs": [],
       "source": [
         "#si-date-check\n",
+        "import re\n",
         "def dateCheck(date_str):\n",
         "    pattern = r'^\\d{2}-\\d{2}-\\d{4}$'\n",
         "\n",
