--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1013,7 +1013,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
         "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
@@ -1021,6 +1021,7 @@
       "outputs": [],
       "source": [
         "#si-email-check\n",
+        "import re\n",
         "def emailCheck(email_string):\n",
         "    pattern = r'^[a-zA-Z0-9._]+@[a-zA-Z0-9]+\\.(com|edu|org)$'\n",
         "    if re.match(pattern, email_string):\n",
