--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1013,7 +1013,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
         "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
@@ -1023,7 +1023,7 @@
         "#si-email-check\n",
         "import re\n",
         "def emailCheck(email_str):\n",
-        "    pattern = r'^[\\w\\.-]+@[a-zA-Z0-9]+\\.[a-zA-Z]{2,3}$'\n",
+        "    pattern = r'^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$'\n",
         "    if re.match(pattern, email_str):\n",
         "        return True\n",
         "    else:\n",
